GNOME Bugzilla – Bug 745400
fix a couple of issues in gdkglcontext-win32
Last modified: 2015-03-02 04:26:03 UTC
See patches.
Created attachment 298245 [details] [review] gdkglcontext-win32: remove unused variables
Created attachment 298246 [details] [review] gdkglcontext-win32: fix variable names in GDK_NOTE These probably weren't caught because GDK_NOTE was disabled when the change was tested.
Review of attachment 298245 [details] [review]: sure
Review of attachment 298246 [details] [review]: ok
Attachment 298245 [details] pushed as 4f0ab56 - gdkglcontext-win32: remove unused variables Attachment 298246 [details] pushed as c91076f - gdkglcontext-win32: fix variable names in GDK_NOTE