gdkglcontext-win32: remove unused variables

https://bugzilla.gnome.org/show_bug.cgi?id=745400